# demo_project

./: .gitignore  .pre-commit-config.yaml  API_DESIGN.md  ARCHITECTURE.md  DATABASE_DESIGN.md  DESIGN_DECISIONS.md  README.md  docker-compose.yml  docker-start.sh  nginx.conf  pyproject.toml
apps/api_service/: Dockerfile  README.md  __init__.py  main.py  start.py
apps/api_service/routers/: __init__.py  health.py  reports.py  webhooks.py
apps/api_service/services/: __init__.py  alert_cache_service.py  alert_check_service.py  report_service.py  webhook_service.py
apps/celery_service/: Dockerfile  README.md  __init__.py  celery_app.py  flower_monitor.py  start.sh  start_flower.sh  worker.py
apps/celery_service/tasks/: __init__.py  amazon_tasks.py  report_tasks.py
shared/: README.md
shared/src/shared/: pyproject.toml
shared/src/shared/analyzers/: README.md  __init__.py  analyzer_types.py  competitor_analyzer.py  llm_report_generator.py  prompt_templates.py
shared/src/shared/analyzers/tests/: __init__.py  test_competitor_analyzer.py  test_llm_report_generator.py  test_prompt_templates.py
shared/src/shared/celery/: celery_config.py
shared/src/shared/collectors/: amazon_data_collector.py
shared/src/shared/collectors/tests/: __init__.py  test_amazon_data_collector.py
shared/src/shared/config/: settings.py
shared/src/shared/database/: README.md  __init__.py  alert_queries.py  asin_status_queries.py  model_types.py  products_queries.py  report_queries.py  snapshots_queries.py  supabase_client.py
shared/src/shared/database/tests/: __init__.py  (+1 more)
