[project]
name = "demo-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel",email = "daniel7634@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.116.2,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "apify-client (>=2.1.0,<3.0.0)",
    "supabase (>=2.19.0,<3.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "openai (>=1.108.0,<2.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "flower (>=2.0.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
black = "^25.9.0"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"

[tool.poetry]
packages = [
  { include = "shared", from = "shared/src" },
]
